--- a/sql과제/signup.html
+++ b/sql과제/signup.html
@@ -33,7 +33,7 @@
     <h2 style="text-align: center;">CSE20181210 Sign Up Page</h2>
     <form method="get" action="http://cspro.sogang.ac.kr/~cse20181210/cgi-bin/signup.php" class="main-form">
         <div class="div-input">
-            <span>ID: </span><input type="text" name="id">
+            <span>ID: </span><input type="text" name="userid">
         </div>
         <div class="div-input">
             <span>Password: </span><input type="password" name="password">
@@ -66,7 +66,7 @@
 
             <li> <input type="checkbox" name="interests[]" value="computer"> Computer Science
                 <li> <input type="checkbox" name="interests[]" value="electronic"> Electronic
-                <li> <input type="checkbox" name="interests[]" value="chemical"> Chemical and Biomolecular
+                <li> <input type="checkbox" name="interests[]" value="chem+bio"> Chemical and Biomolecular
                 <li> <input type="checkbox" name="interests[]" value="mechanical"> Mechanical
                 <li> <input type="checkbox" name="interests[]" value="else"> Else
         </div>
